# employee-management

./: .gitignore  pyproject.toml
src/: main.py
src/components/: appbar.py  card.py  genericButton.py  genericTextField.py  info_fields.py
src/database/: database.db
src/pages/: create_departments.py  create_job_title.py  home.py  login.py  register_employees.py  signup.py
src/theme/: colors.py
